redirect to https? attempt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500&family=Zilla+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script>
+      if (window.location.host === "capstone-tabletop.herokuapp.com" && window.location.protocol !== "https:") {
+        window.location.href = "https://capstone-tabletop.herokuapp.com";
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
